<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lips</string>
    <!-- home -->
    <string name="tab_search">搜索</string>
    <string name="tab_activity">动态</string>
    <string name="tab_profile">账户</string>

    <!-- login form -->
    <string name="user_name">用户名</string>
    <string name="user_desc">简介</string>
    <string name="hint_user_name">你的个性名称(长度3~20)</string>
    <string name="hint_user_desc">请用一句话描述自己</string>
    <string name="hint_email">你的邮箱</string>
    <string name="email_address">Email</string>
    <string name="password">密码</string>
    <string name="gender">性别</string>
    <string name="genderMale">Boy</string>
    <string name="genderFemale">Girl</string>
    <string name="genderNo">未知</string>
    <string name="login">登录</string>
    <string name="login_other">其他账号登录</string>
    <string name="signup">注册新账号</string>
    <string name="valid_name">用户名长度介于3-20个字符</string>
    <string name="valid_desc">个人描述最大长度为200个字符</string>
    <string name="valid_email_syntax">非法的邮箱格式</string>
    <string name="valid_email_size">邮箱长度介于7-30个字符</string>
    <string name="valid_password">密码长度介于4-20个字符</string>
    <string name="please_login">请先登录账号</string>
    <!-- toast -->
    <string name="register_same_email">注册失败：此邮箱已经被注册，请直接登录</string>
    <string name="register_success">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_passwd_wrong">账户密码不匹配</string>
    <string name="network_not_avalible">网络异常，请检查网络连接...</string>
    <string name="unknown_error">未知错误...</string>
    <string name="not_login">错误：请先登录...</string>
    <string name="get_account_error">获取账号信息失败</string>
    <string name="add_line_error">添加美言失败</string>
    <string name="add_line_success">添加美言成功</string>
    <!-- page me -->

    <string name="no_desc">没有个人简介</string>
    <string name="modify">修改</string>
    <string name="refresh">更新</string>
    <!-- hint -->
    <string name="search">搜索</string>
    <string name="divider">华丽丽的分割线</string>
    <string name="toplist">排行榜</string>
    <!--  -->
    <string name="lines">美言</string>
    <string name="followers">粉丝</string>
    <string name="following">关注</string>

    <!-- add line -->
    <string name="progress_send_line">正在发布中...</string>
    <string name="add_line">添加美言</string>
    <!-- user activity -->

    <string name="tab_clips">语录</string>
    <string name="tab_lines">美言</string>
    <string name="tab_likes">收藏</string>
    <string name="tab_about">关于</string>

</resources>