<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_cell_padding"
            android:text="@string/user_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_name"
            style="@style/input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:maxLength="20"
            android:text="aaa好的" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_cell_padding"
            android:text="@string/user_desc"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_desc"
            style="@style/input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_user_desc"
            android:inputType="text"
            android:maxLength="200"
            android:text="帅国一枚啊" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_cell_padding"
            android:text="@string/email_address"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:text="ranxiedao@163.com" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_cell_padding"
            android:text="@string/password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/input_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:maxLength="20"
            android:text="1111" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/signup_cell_padding"
            android:text="@string/gender"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/signup_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/signup_gender_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/genderMale" />

            <RadioButton
                android:id="@+id/signup_gender_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genderFemale" />

            <RadioButton
                android:id="@+id/signup_gender_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/genderNo" />
        </RadioGroup>

        <Button
            android:id="@+id/signup_btn_submit"
            style="@style/btn_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup" />
    </LinearLayout>

</ScrollView>