<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_email"
            style="@style/login_et"
            android:hint="@string/email_address"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="textEmailAddress"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_gray"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/login_et"
            android:hint="@string/password"
            android:imeOptions="actionGo|flagNoExtractUi"
            android:inputType="textPassword"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_gray"/>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@drawable/touch_clear_bg"
            android:gravity="center"
            android:text="@string/login"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn_other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_other"/>

        <Button
            android:id="@+id/login_btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup"/>
    </LinearLayout>

</LinearLayout>