<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/me_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/please_login"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:orientation="vertical" >

        <RelativeLayout
          android:id="@+id/me_account_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/touch_clear_bg"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="13dp" >

            <ImageView
                android:id="@+id/me_arrow_goto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_goto" />

            <TextView
                android:id="@+id/me_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/me_arrow_goto"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="用户名" />

            <TextView
                android:id="@+id/me_desc"
                style="@style/secondText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/me_name"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@id/me_arrow_goto"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="简介..." />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/me_btn_lines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/touch_clear_bg"
                android:padding="14dp"
                android:text="@string/lines" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="@color/divider_gray" />

            <Button
                android:id="@+id/me_btn_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/touch_clear_bg"
                android:padding="14dp"
                android:text="@string/followers" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="@color/divider_gray" />

            <Button
                android:id="@+id/me_btn_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/touch_clear_bg"
                android:padding="14dp"
                android:text="@string/following" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_news"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent" />

</LinearLayout>